--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "16.0.7",
     "phaser": "^3.90.0",
+    "phaser-virtual-joystick": "^0.3.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
